# pybp

./: .gitignore  MANIFEST.in  setup.cfg
pybp/: cli.py  config.py  main.py  projgen.py  prompt.py  template.py
pybp/templates/: pybp.conf
pybp/templates/licenses/: MIT
pybp/templates/python/: setup.cfg
tests/: test_templating.py
