[metadata]
name = {{ plan.name }}
author = {{ author }}
version = 0.0.1
description = {{ plan.desc }}
long_description = file: README.md
long_description_content_type = "text/markdown"
{? plan.license ?}
license = {{ plan.license_identifier }}
license_file = {{ plan.license_name }}
{? end ?}

[options]
packages =
{{ ["    " + pkg for pkg in plan.packages] }}
{? plan.project_deps ?}
install_requires =
{{ ["    " + pkg for pkg in plan.project_deps] }}
{? end ?}
include_package_data = yes

{? plan.devonly_deps ?}
[options.extras_require]
dev =
{{ ["   " + pkg for pkg in plan.devonly_deps] }}
{? end ?}

{? plan.console_scripts ?}
[options.entry_points]
console_scripts =
{{ ["   " + entry for entry in plan.console_scripts] }}
{? end ?}
